# Yolo_mark

./: .gitignore  CMakeLists.txt  CMakeLists_MinGW.txt  build_opencv.sh  build_opencv_mingw.sh  download_opencv.sh
