cmake_minimum_required(VERSION 3.14 FATAL_ERROR)

set(Yolo_mark_MAJOR_VERSION 1)
set(Yolo_mark_MINOR_VERSION 0)
set(Yolo_mark_PATCH_VERSION 0)
set(Yolo_mark_VERSION ${Yolo_mark_MAJOR_VERSION}.${Yolo_mark_MINOR_VERSION}.${Yolo_mark_PATCH_VERSION})

project(Yolo_mark VERSION ${Yolo_mark_VERSION})
enable_language(CXX)
set(BUILD_SHARED_LIBS FALSE)
set(CMAKE_CXX_STANDARD 14)

find_package(OpenCV REQUIRED)

if(TARGET opencv_world)
  list(APPEND OpenCV_LINKED_COMPONENTS "opencv_world")
else()
  if(TARGET opencv_video)
    list(APPEND OpenCV_LINKED_COMPONENTS "opencv_video")
  endif()
  if(TARGET opencv_videoio)
    list(APPEND OpenCV_LINKED_COMPONENTS "opencv_videoio")
  endif()
  if(TARGET opencv_highgui)
    list(APPEND OpenCV_LINKED_COMPONENTS "opencv_highgui")
  endif()
  if(TARGET opencv_imgproc)
    list(APPEND OpenCV_LINKED_COMPONENTS "opencv_imgproc")
  endif()
  if(TARGET opencv_imgcodecs)
    list(APPEND OpenCV_LINKED_COMPONENTS "opencv_imgcodecs")
  endif()
  if(TARGET opencv_core)
    list(APPEND OpenCV_LINKED_COMPONENTS "opencv_core")
  endif()
endif()

set(Yolo_mark_SOURCES "${CMAKE_CURRENT_LIST_DIR}/src/main.cpp")

add_executable(yolo_mark ${Yolo_mark_SOURCES})
target_link_libraries(yolo_mark ${OpenCV_LINKED_COMPONENTS})
install(TARGETS yolo_mark DESTINATION "${INSTALL_BIN_DIR}")
